SAM-1943: Support for Extended Matching Item (R-type) MCQs
git-svn-id: https://source.sakaiproject.org/svn/sam/trunk@305964 66ffb92e-73f9-0310-93c1-f5514f145a0a